# Groebner-Basis

./: README.md
GroebnerLib/: CMakeLists.txt  library.h
programm/: CMakeLists.txt  main.cpp
programm/GroebnerLib/includes/: Lib.h  Modular.h  Monom.h  OrderingTerm.h  Polynom.h  PolynomSet.h  Rational.h  Term.h  Utils.h
programm/GroebnerLib/src/: Monom.cpp  Rational.cpp
programm/tests/: AlgorithmTest.cpp  ModularTest.cpp  MonomTest.cpp  OrderingTermTest.cpp  PolynomSetTest.cpp  PolynomTest.cpp  RationalTest.cpp  TermTest.cpp
